# python-multiversion-dependency-management-demo

./: Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
requirements/: functests.in  lint.in  tests.in
requirements/py310/: README.md  coverage.in  coverage.txt  dev.txt  format.in  format.txt  functests.txt  lint.in  lint.txt  prod.txt  tests.txt
requirements/py38/: README.md  dev.txt  functests.in  functests.txt  prod.txt  tests.txt
requirements/py39/: README.md  dev.txt  functests.txt  prod.txt  tests.in  tests.txt
src/python_multiversion_dependency_management_demo/: app.py
tests/: pyproject.toml
tests/functional/: app_test.py
tests/unit/python_multiversion_dependency_management_demo/: app_test.py
