[metadata]
name = python_multiversion_dependency_management_demo
url = https://github.com/seanh/python-multiversion-dependency-management-demo/
project_urls =
    Bug Tracker = https://github.com/seanh/python-multiversion-dependency-management-demo/issues
    Changelog = https://github.com/seanh/python-multiversion-dependency-management-demo/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    toml

[options.packages.find]
where = src
