[metadata]
name = python_multiversion_dependency_management_demo
url = https://github.com/seanh/python-multiversion-dependency-management-demo/
project_urls =
    Bug Tracker = https://github.com/seanh/python-multiversion-dependency-management-demo/issues
    Changelog = https://github.com/seanh/python-multiversion-dependency-management-demo/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    toml

[options.packages.find]
where = src

[pycodestyle]
ignore =
    # Disable pycodestyle errors and warnings that we don't care about because
    # Black formats our code for us.
    E203,  # Whitespace before ':',
    E231,  # Missing whitespace after ',',
    E501,  # Line too long,
    W503,  # Line break before binary operator,

    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
    E722,
